# rest3client

./: .gitignore  Dockerfile  Makefile  README.md  build.py  build.sh  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
rest3client/: __init__.py  rest.py  restcli.py  restclient.py  ssladapter.py
src/main/python/rest3client/: __init__.py  rest.py  restcli.py  restclient.py  ssladapter.py
src/unittest/python/: test_RESTcli.py  test_RESTclient.py  test_SSLAadapter.py
tests/: test_RESTclient.py  test_SSLAadapter.py
